--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+   <h1>Paris, France</h1>
+    <br>
+    <p>Paris is known for its art, fashion, and culture. Famous landmarks, museums, and cafes make it a top travel spot.</p>
+
+    <ol>
+        <li><strong>Eiffel Tower:</strong> Iconic symbol of Paris.</li>
+        <li><strong>Louvre Museum:</strong> Home to the <em>Mona Lisa</em>.</li>
+        <li><strong>Notre-Dame:</strong> A Gothic masterpiece.</li>
+        <li><em>Champs-Élysées:</em> Famous avenue for shopping and cafes.</li>
+        <li><strong>Sacré-Cœur:</strong> Stunning views from <em>Montmartre</em>.</li>
+    </ol>
+
+    <ul>
+        <li><strong>Croissants:</strong> Flaky and buttery.</li>
+        <li><strong>Baguette:</strong> Fresh and crusty.</li>
+        <li><strong>Macarons:</strong> Colorful French sweets.</li>
+        <li><em>Escargots:</em> Snails in garlic butter.</li>
+        <li><strong>Ratatouille:</strong> Classic vegetable dish.</li>
+    </ul>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
