--- a/main.html
+++ b/main.html
@@ -15,17 +15,17 @@
     <ol>
         <li><strong>Eiffel Tower:</strong> Iconic symbol of Paris.</li>
         <li><strong>Louvre Museum:</strong> Home to the <em>Mona Lisa</em>.</li>
-        <li><strong>Notre-Dame:</strong> A Gothic masterpiece.</li>
-        <li><em>Champs-Élysées:</em> Famous avenue for shopping and cafes.</li>
+        <li><strong>Notre-Dame:</strong> A Gothic <b>masterpiece</b>.</li>
+        <li><em>Champs-Élysées:</em> Famous avenue <i>for shopping</i> and cafes.</li>
         <li><strong>Sacré-Cœur:</strong> Stunning views from <em>Montmartre</em>.</li>
     </ol>
 
     <ul>
         <li><strong>Croissants:</strong> Flaky and buttery.</li>
         <li><strong>Baguette:</strong> Fresh and crusty.</li>
-        <li><strong>Macarons:</strong> Colorful French sweets.</li>
+        <li><strong>Macarons:</strong> Colorful <i> French </i> sweets.</li>
         <li><em>Escargots:</em> Snails in garlic butter.</li>
-        <li><strong>Ratatouille:</strong> Classic vegetable dish.</li>
+        <li><strong>Ratatouille:</strong> Classic <b> vegetable</b> dish.</li>
     </ul>
 	
     <script type="text/javascript" src="./script.js">
